# emscripten-demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README
.github/workflows/: deploy.yml
src/: CMakeLists.txt  app.cpp  app.hpp  bus.cpp  bus.hpp  gl.hpp  glad.c  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shell.html  window.cpp  window.hpp
